chore!: update spring version (#381)